修改Jenkinsfile,新增Dockerfile